# GLCraft_cpp

./: .gitignore  GLObjects.cpp  GLObjects.h  README.md  basic.vs  camera.h  circleui.frag  circleui.vert  craft.sln  craft.vcxproj  craft.vcxproj.filters  debug.cpp  debug.h  gui.cpp  gui.h  image_tool.py  main.cpp  ray.h  shader.h  texture.fs  world.cpp  world.h
TestCraft/: TestCraft.vcxproj  biome_test.py  biomes.txt  main.cpp  map0_0.txt  map0_4096.txt  map4096_0.txt
craft/: .gitignore  CMakeLists.txt  GLObjects.cpp  GLObjects.h  README.md  basic.fs  blocks.cpp  blocks.hpp  camera.h  collision.cpp  collision.h  craft.sln  craft.vcxproj  craft.vcxproj.filters  debug.h  glad.c  gui.cpp  gui.h  image_tool.py  main.cpp  model_utils.cpp  model_utils.h  plants.cpp  plants.hpp  rendering.cpp  rendering.hpp  shader.h  solidcolor.vs  terrain_demo.py  timelog.txt  wave.fs  weather.cpp  weather.h  world.cpp  world.h
craft/Libraries/include/glad/: glad.h
craft/Libraries/lib/: generation.lib
craft/cmake/: Findglfw3.cmake
craft/generation/: CMakeLists.txt  layers.cpp  layers.h  map.cpp  map.h
craft/miniGLTF/: CMakeLists.txt  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Texture.cpp  Texture.h
craft/resources/: atlasGUI.fs  atlasGUI.vs  basic.fs  basic.vs  billboard.vs  circleui.vert  cutout.fs  cutout_basic.fs  solidGUI.fs  solidGUI.vs  solidcolor.fs  texture.fs  texture.vs  wave.fs
craft/resources/models/minecraft_torch/: license.txt  scene.gltf
docs/: Terrain Generation.pptx
generation/: generation.vcxproj  generation.vcxproj.filters  layers.cpp  layers.h  map.cpp  (+1 more)
(+1 files in other folders)
